feat: increase rod prices +25% and fix catalogue undiscovered display

--- a/src/components/FishCatalogue.css
+++ b/src/components/FishCatalogue.css
@@ -236,6 +236,10 @@
     object-fit: contain;
 }
 
+.detail-image.undiscovered {
+    opacity: 0;
+}
+
 .detail-info {
     flex: 1;
     display: flex;
